Fix whitespace around the subtitle's icon

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -212,6 +212,10 @@ img[role='presentation'] {
   margin-bottom: 2rem;
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 #crossedfingers,
 #redheart {
   max-width: 400px;
